fix: 운영자 대회목록 조회 수정